# price_scraper

./: .gitignore  CLAUDE.md  README.md  bjornborg_scraper.py  ean_price_history.json  ean_price_monitor.py  ean_products.yaml  email_sender.py  email_templates.py  fitnesstukku_test.py  migrate_price_history.py  price_analysis_reporter.py  price_analyzer.py  price_history.json  price_monitor.py  product_manager.py  product_manager_debug.py  products.yaml  pyproject.toml  requirements.txt  restore_price_history.sh
.github/workflows/: comment-processor.yml  daily-price-monitor.yml  ean-price-monitor.yml  monthly-analysis.yml  test.yml
scrapers/: __init__.py  base_scraper.py  bjornborg.py  fitnesstukku.py  shopify_scraper.py  tokmanni.py
tests/: __init__.py  conftest.py  test_ean_monitor.py  test_email_templates.py  test_price_analyzer.py  test_price_monitor.py  test_product_manager.py
tests/test_scrapers/: __init__.py  test_bjornborg.py  test_fitnesstukku.py
