[project]
name = "scraper"
version = "0.1.0"
description = "Multi-site price monitoring system for Björn Borg and Fitnesstukku products"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]
